--- a/index.css
+++ b/index.css
@@ -16,11 +16,17 @@ a:hover {
 #intro {
     height: 100vh;
 }
+#about {
+    margin-top: 1.5rem;
+}
 #contact {
+    margin: 5rem 0 5rem;
     height: 83vh;
 }
-#about, #contact {
-    margin-top: 2rem;
+@media (max-width: 700px) {
+    #contact {
+        height: 100vh;
+    }
 }
 .flex-center {
     color: #fff;
