--- a/index.css
+++ b/index.css
@@ -1,59 +1,60 @@
 * {
-    font-family: 'Raleway', sans-serif;
+  font-family: 'Raleway', sans-serif;
 }
 h1 {
-    letter-spacing: 8px;
+  letter-spacing: 8px;
 }
 h5 {
-    letter-spacing: 3px;
+  letter-spacing: 3px;
 }
 a {
-    color: #212121;
+  color: #212121;
 }
 a:hover {
-    color: #FF8800;
+  color: #ff8800;
 }
-#intro, #contact {
-    height: 100vh;
+#intro,
+#contact {
+  height: 100vh;
 }
 #about {
-    margin-top: 1.5rem;
-    margin-bottom: 5rem;
+  margin-top: 1.5rem;
+  margin-bottom: 5rem;
 }
 .flex-center {
-    color: #fff;
+  color: #fff;
 }
 .intro-bg {
-    background: url("./img/pexels-photo-3.jpeg")no-repeat center center;
-    background-size: cover;
-    background-attachment: fixed;
+  background: url('./img/intro-bg.jpeg') no-repeat center center;
+  background-size: cover;
+  background-attachment: fixed;
 }
 .contact-bg {
-    background: url("./img/pexels-photo-5.jpeg")no-repeat center center;
-    background-size: cover;
-    background-attachment: fixed;
+  background-color: #333;
+  background-size: cover;
+  background-attachment: fixed;
 }
 footer.page-footer {
-    margin-top: 0;
+  margin-top: 0;
 }
 /* Scrollbar */
 ::-webkit-scrollbar {
-    width: 10px;
+  width: 10px;
 }
 /* Track */
 ::-webkit-scrollbar-track {
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.25);
-    -webkit-border-radius: 4px;
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.25);
-    border-radius: 4px;
-    /* display: none; */
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.25);
+  -webkit-border-radius: 4px;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.25);
+  border-radius: 4px;
+  /* display: none; */
 }
 /* Handle */
 ::-webkit-scrollbar-thumb {
-    -webkit-border-radius: 4px;
-    border-radius: 4px;
-    background: #212121;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  background: #212121;
 }
 ::-webkit-scrollbar-thumb:window-inactive {
-    background: #666;
+  background: #666;
 }
