--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -69,7 +69,7 @@ const featuredProject = projects.filter(({ publishDate }) => !!publishDate)
 				padding: 1rem;
 
 				@media (min-width: $w-s) {
-					padding-left: 4rem;
+					padding-left: 2rem;
 				}
 			}
 
@@ -161,6 +161,11 @@ const featuredProject = projects.filter(({ publishDate }) => !!publishDate)
 				font-size: var(--f-u2);
 				margin-top: 1.5rem;
 				margin-bottom: 0;
+				padding: 0 0.5rem;
+
+				@media (min-width: 425px) {
+					padding-right: 1rem;
+				}
 			}
 
 			.subtitle {
