--- a/src/layouts/project.astro
+++ b/src/layouts/project.astro
@@ -29,6 +29,10 @@ const { content } = Astro.props;
 				margin-right: 0.5em;
 				text-transform: uppercase;
 
+				@media (max-width: 320px) {
+					font-size: 0.8rem;
+				}
+
 				&:nth-of-type(1n) {
 					color: var(--c-green);
 				}
